--- a/sytle/sass/ship-ui/_utilities.scss
+++ b/sytle/sass/ship-ui/_utilities.scss
@@ -170,6 +170,9 @@ input[type='password']{
 .disNone{
     display: none;
 }
+.disNone-important{
+    display: none !important;
+}
 .dis-flex{
     @extend %dis-flex;
 }
