--- a/sytle/sass/ship-ui/components/_header.scss
+++ b/sytle/sass/ship-ui/components/_header.scss
@@ -26,7 +26,7 @@
             height: px2rem(60);
             background-size: 100% 100%;
             margin-top: -0.62222rem;
-            background-image: url(../../image/ico_left.png);
+            background-image: url(../../../image/ico_left.png);
             background-color: transparent;
             background-repeat: no-repeat;
         }
