--- a/sytle/sass/index.scss
+++ b/sytle/sass/index.scss
@@ -36,6 +36,7 @@
         //border-bottom: 1px solid #ddd;
         align-items:center;
         border-bottom: 0.2rem solid #999;
+        border-top: 0.2rem solid #999;
         //margin-bottom: px2rem(20);
         .userInfoPart{
             width: 25%;
@@ -77,31 +78,50 @@
     }
     .ui_grids_9{
         .ui_grid{
-            min-height: px2rem(180);
+            //min-height: px2rem(180);
+            height: px2rem(150);
             text-decoration: none;
             display: block;
             float: left;
             text-align: center;
             width: 33.333%;
             padding: px2rem(10) 0;
+            .ui_grid_icon{
+                height: px2rem(85);
+                .icon{
+                    display: block;
+                    height: 100%;
+                    img{
+                        height:100%;
+                    }
+                }
+            }
             .ui_grid_label{
+                margin-top: px2rem(10);
                 @include setFontInfo($fontColor:$gray-666,$fontSize:px2rem(20));
             }
-            border: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
             &:nth-child(3n+1){
                 border-left: none;
+                border-right: 1px solid #ddd;
+                border-bottom: 1px solid #ddd;
             }
-            &:nth-child(3n){
-                border-right: none;
+            &:nth-child(3n+2){
+                border-right: 1px solid #ddd;
             }
-            &:nth-child(2n){
-                border-right: none;
-                border-left: none;;
-            }
-            &:nth-child(6),&:nth-child(4),&:nth-child(5){
-                border-top: none;
-                border-bottom: none;
-            }
+            //&:nth-child(3n+3){
+            //    border-left: none;
+            //}
+            //&:nth-child(6),&:nth-child(4),&:nth-child(5){
+            //    border-top: none;
+            //    border-bottom: none;
+            //}
+            //&:nth-child(6){
+            //    border-bottom: 1px solid #ddd;
+            //}
+            //&:last-child{
+            //    border-right: 1px solid #ddd;
+            //}
         }
     }
 }
@@ -134,6 +154,81 @@
             color: #666;
             font-weight: normal;
             font-size: 0.53333rem;
+        }
+    }
+}
+
+//检查步骤
+.check-step{
+    .ui_media_title{
+        color: #222;
+        font-weight: normal;
+        font-size: 0.7619rem;
+        margin: 0.22222rem 0;
+    }
+    .ui_media_desc span{
+        display: block;
+        margin-bottom: 0.07619rem;
+        color: #666;
+        font-weight: normal;
+        font-size: 0.53333rem;
+    }
+    .ng-info{
+        margin-top: 0.38095rem;
+        margin-bottom: 0.38095rem;
+        border-top:1px solid #aaa;
+        border-bottom:1px solid #aaa;
+    }
+    .ui_cell{
+        padding: 0.38095rem 0.57143rem;
+        position: relative;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+        .ui_cell_bd{
+            font-size: px2rem(26);
+            position: relative;
+            -webkit-box-flex: 1;
+            -webkit-flex: 1;
+            flex: 1;
+            textarea{
+                display: block;
+                border: 0;
+                resize: none;
+                width: 100%;
+                color: inherit;
+                font-size: 1em;
+                line-height: inherit;
+                outline: 0;
+            }
+            .ui_textarea_counter{
+                text-align: right;
+                font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+                color: #666;
+                font-weight: normal;
+                font-size: 0.60952rem;
+            }
+        }
+    }
+    .item-detail-info{
+        display: none;
+        p{
+            overflow: visible;
+            white-space: normal;
+            -webkit-line-clamp: 1000;
+            font-family: "SimSun";
+            color: #666;
+            font-weight: normal;
+            font-size: 0.60952rem;
+        }
+        ul{
+            list-style-position: inside;
+            li{
+                margin-left: 0;
+            }
         }
     }
 }
