--- a/sytle/sass/ship-ui/components/_button.scss
+++ b/sytle/sass/ship-ui/components/_button.scss
@@ -32,6 +32,11 @@
     color: $btn-primary-color;
     border: 1px solid $btn-primary-border;
 }
+.ui-btn-success{
+    @include setBackgroundColor($btn-success-bg);
+    color: $btn-success-color;
+    border: 1px solid $btn-success-border;
+}
 
 
 //页面底部；或者页面中间区域需要按钮块的区域
