--- a/sytle/css/index.css
+++ b/sytle/css/index.css
@@ -127,6 +127,7 @@
   font-weight: normal;
   font-size: 0.53333rem; }
 .check-step .ng-info {
+  display: none;
   margin-top: 0.38095rem;
   margin-bottom: 0.38095rem;
   border-top: 1px solid #aaa;
@@ -175,5 +176,106 @@
     list-style-position: inside; }
     .check-step .item-detail-info ul li {
       margin-left: 0; }
+
+.check-step-tabBar .ui_tabbar_item {
+  padding-top: 0.4rem; }
+.check-step-tabBar .raido-option-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex; }
+.check-step-tabBar .raido-item {
+  flex: 1; }
+
+.ui-header-btnStyle {
+  overflow: visible; }
+  .ui-header-btnStyle .ui-select-list {
+    min-width: 6rem;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    top: 2rem;
+    border: 1px solid #ddd;
+    z-index: 6; }
+    .ui-header-btnStyle .ui-select-list li {
+      padding: 0;
+      font-size: 0.57778rem;
+      color: #222; }
+      .ui-header-btnStyle .ui-select-list li input[name='fs'] {
+        position: absolute;
+        opacity: 0; }
+      .ui-header-btnStyle .ui-select-list li:last-child {
+        border-bottom: none; }
+      .ui-header-btnStyle .ui-select-list li label {
+        padding: 0.48889rem 0.44444rem;
+        display: block;
+        width: 100%; }
+  .ui-header-btnStyle .ico-up {
+    background-color: #fff;
+    z-index: 7;
+    bottom: -0.17778rem;
+    position: absolute;
+    right: 0.22222rem;
+    width: 0.33333rem;
+    height: 0.33333rem;
+    border-top: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+    transform: rotate(-45deg); }
+
+.actionsheet-selectList .ui_actionsheet {
+  top: 0;
+  overflow: auto; }
+.actionsheet-selectList .selectList-dl {
+  text-align: left;
+  font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+  color: #222;
+  font-weight: normal;
+  font-size: 0.68571rem; }
+  .actionsheet-selectList .selectList-dl dd {
+    padding: 0.38095rem;
+    border-bottom: 1px solid #ddd; }
+  .actionsheet-selectList .selectList-dl dt {
+    display: block;
+    font-size: 0.60952rem; }
+    .actionsheet-selectList .selectList-dl dt a {
+      padding: 0.19048rem 0.9619rem;
+      border-bottom: 1px solid #ddd;
+      color: #222;
+      display: flex;
+      text-decoration: none; }
+    .actionsheet-selectList .selectList-dl dt .ui_cell_primary {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      flex: 1; }
+.actionsheet-selectList .ui_actionsheet_cell {
+  padding: 0; }
+.actionsheet-selectList .btn-cancel-actionsheet {
+  text-align: center;
+  width: 100%;
+  padding: 0.38095rem 0;
+  font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+  color: #222;
+  font-weight: normal;
+  font-size: 0.68571rem; }
+
+.text_success {
+  color: green !important; }
+
+.text_warning {
+  color: orange !important; }
+
+.pull-left {
+  float: left; }
+
+.study_list li {
+  min-height: 0.1rem; }
+.study_list a {
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+  color: #222;
+  font-weight: normal;
+  font-size: 0.6rem;
+  padding: 0.2rem 0; }
 
 /*# sourceMappingURL=index.css.map */
