--- a/sytle/css/ship-ui/ship-mobile-ui.css
+++ b/sytle/css/ship-ui/ship-mobile-ui.css
@@ -911,9 +911,6 @@ img {
   color: #5FA0D8; }
 
 .ui_tabbar {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
   position: fixed;
   z-index: 500;
   bottom: 0;
@@ -945,6 +942,76 @@ img {
     font-weight: normal;
     font-size: 0.60952rem;
     text-align: center; }
+  .ui_tabbar .raido-option-list {
+    width: 100%; }
+    .ui_tabbar .raido-option-list .radioBox,
+    .ui_tabbar .raido-option-list .raido-item {
+      height: 1.33333rem;
+      line-height: 1.33333rem;
+      color: #222;
+      font-weight: normal;
+      font-size: 0.60952rem;
+      text-align: center;
+      border-left: 1px solid #ddd; }
+      .ui_tabbar .raido-option-list .radioBox:first-child,
+      .ui_tabbar .raido-option-list .raido-item:first-child {
+        border-left: 0; }
+
+.ui_mask_transition {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: transparent;
+  transition: background .3s; }
+
+.ui_fade_toggle {
+  background: rgba(0, 0, 0, 0.6); }
+
+.ui_actionsheet {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  transform: translate(0, 100%);
+  backface-visibility: hidden;
+  z-index: 5000;
+  width: 100%;
+  background-color: #eee;
+  transition: transform .3s; }
+
+.ui_actionsheet_menu {
+  background-color: #FFFFFF; }
+
+.ui_actionsheet_action {
+  margin-top: 6px;
+  background-color: #FFFFFF; }
+
+.ui_actionsheet_cell {
+  position: relative;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 18px; }
+  .ui_actionsheet_cell:before {
+    content: " ";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 1px;
+    border-top: 1px solid #D9D9D9;
+    color: #D9D9D9;
+    transform-origin: 0 0;
+    transform: scaleY(0.5); }
+  .ui_actionsheet_cell:active {
+    background-color: #ECECEC; }
+  .ui_actionsheet_cell:first-child:before {
+    display: none; }
+
+.ui_actionsheet_toggle {
+  transform: translate(0, 0); }
 
 * {
   -webkit-box-sizing: border-box;
