--- a/sytle/sass/index.scss
+++ b/sytle/sass/index.scss
@@ -174,6 +174,7 @@
         font-size: 0.53333rem;
     }
     .ng-info{
+        display: none;
         margin-top: 0.38095rem;
         margin-bottom: 0.38095rem;
         border-top:1px solid #aaa;
@@ -230,5 +231,132 @@
                 margin-left: 0;
             }
         }
+    }
+}
+.check-step-tabBar{
+    .ui_tabbar_item{
+        padding-top: 0.4rem;
+    }
+    .raido-option-list{
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: flex;
+    }
+    .raido-item{
+        flex: 1;
+    }
+}
+.ui-header-btnStyle{
+    overflow: visible;
+    .ui-select-list{
+        min-width: 6rem;
+        text-align: center;
+        position: absolute;
+        right: 0;
+        top: px2rem(90);
+        border: 1px solid #ddd;
+        z-index: 6;
+        li{
+            padding: 0;
+            font-size: px2rem(26);
+            color: #222;
+            input[name='fs']{
+                position: absolute;
+                opacity: 0;
+            }
+            &:last-child{
+                border-bottom: none;
+            }
+            label{
+                padding: 0.48889rem 0.44444rem;
+                display: block;
+                width: 100%;
+            }
+        }
+    }
+    .ico-up{
+        @include setBackgroundColor(#fff);
+        z-index: 7;
+        bottom:px2rem(-8);
+        position: absolute;
+        right: px2rem(10);
+        width: px2rem(15);
+        height: px2rem(15);
+        border-top: 1px solid #aaa;
+        border-right: 1px solid #aaa;
+        transform: rotate(-45deg);
+    }
+}
+//关于检查菜单的列表
+.actionsheet-selectList{
+    .ui_actionsheet{
+        top: 0;
+        overflow: auto;
+    }
+    .selectList-dl{
+        text-align: left;
+        font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+        color: #222;
+        font-weight: normal;
+        font-size: 0.68571rem;
+
+        dd{
+            padding: 0.38095rem;
+            border-bottom: 1px solid #ddd;
+        }
+        dt{
+            display: block;
+            font-size: 0.60952rem;
+            a{
+                padding: 0.19048rem 0.9619rem;
+                border-bottom: 1px solid #ddd;
+                color: #222;
+                display: flex;
+                text-decoration: none;
+            }
+            .ui_cell_primary {
+                -webkit-box-flex: 1;
+                -webkit-flex: 1;
+                flex: 1;
+            }
+        }
+    }
+    .ui_actionsheet_cell{
+        padding: 0;
+    }
+    .btn-cancel-actionsheet{
+        text-align: center;
+        width: 100%;
+        padding: 0.38095rem 0;
+        font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+        color: #222;
+        font-weight: normal;
+        font-size: 0.68571rem;
+    }
+}
+.text_success {
+    color: green !important;
+}
+.text_warning {
+    color: orange !important;
+}
+.pull-left{
+    float: left;
+}
+
+//按章节或者按位置学习
+.study_list{
+    li{
+        min-height: 0.1rem;
+    }
+    a{
+        text-decoration: none;
+        display: block;
+        text-align: left;
+        font-family: "SimSun" "arial" "Helvetica" "NSimSun" "FangSong" "Microsoft YaHei";
+        color: #222;
+        font-weight: normal;
+        font-size: 0.6rem;
+        padding: 0.2rem 0;
     }
 }
